--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,17 +15,36 @@ services:
     networks:
       - notifications-network
 
-  backend:
+  backend-node:
     build:
       context: ./backend-node
       dockerfile: Dockerfile
-    container_name: backend-notifications
+    container_name: backend-notifications-node
     ports:
       - "5014:5014"
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - NODE_ENV=development
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - notifications-network
+    restart: unless-stopped
+
+  backend-dotnet:
+    build:
+      context: ./redis/WebApplication1/WebApplication1
+      dockerfile: Dockerfile
+    container_name: backend-notifications-dotnet
+    ports:
+      - "5015:5014"
+    environment:
+      - ASPNETCORE_URLS=http://+:5014
+      - ASPNETCORE_ENVIRONMENT=Development
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     depends_on:
       redis:
         condition: service_healthy
@@ -42,7 +61,8 @@ services:
       - ./demo-frontend:/usr/share/nginx/html:ro
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      - backend
+      - backend-node
+      - backend-dotnet
     networks:
       - notifications-network
     restart: unless-stopped
