--- a/backend-node/Dockerfile
+++ b/backend-node/Dockerfile
@@ -6,7 +6,8 @@ WORKDIR /app
 COPY package*.json ./
 
 # Instalar dependencias
-RUN npm ci --only=production
+# RUN npm ci --only=production
+RUN npm install --omit=dev
 
 # Copiar código
 COPY . .
